@@ -148,3 +148,5 @@ Do not create default icons as there are already at least one created
 
 -Renombrar setting de background windows por multitask windows? O algo así
 Debe indicar que se puede dejar ventanas en background pero que también pueden haber múltiples ventanas a la vez 
+
+-funcion edicion linea texto, si se edita y hay mas de lo que cabe en pantalla, inicia con cursor no visible
